--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
     "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.22",
     "jasmine-core": "~5.9.0",
@@ -47,7 +48,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.2"
   }
 }
