feat: Implement tasks management component with GraphQL integration
- Added tasks.component.ts for managing tasks with create, edit, delete, and filter functionalities.
- Introduced tasks.component.scss for styling task items and forms.
- Created GraphQL queries and mutations for tasks and messages in queries.ts.
- Defined models for tasks, messages, and users in index.ts.
- Implemented app-state.service.ts for managing application state including notifications and loading states.
- Developed graphql.service.ts for handling GraphQL requests and responses.
- Added notifications component with HTML, SCSS, and TypeScript for displaying user notifications.
- Implemented animations for notifications in notifications.scss.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "shared"
   ],
   "scripts": {
-    "start:frontend": "cd frontend && ng serve",
+    "start:frontend": "cd frontend && ng serve --host 0.0.0.0",
     "start:backend": "cd backend && .\\.venv\\Scripts\\python.exe -u manage.py runserver 0.0.0.0:8000",
     "dev": "concurrently --raw \"npm run start:frontend\" \"npm run start:backend\""
   },
